package com.rione.notification.domain;

public enum NotificationType {

	REQUEST_RECEIVED,
	REQUEST_ACCEPTED,
	POST_COMMENT_ADDED,
	POST_REACTION_ADDED
}
